--- a/app/src/main/res/layout/fragment_cover.xml
+++ b/app/src/main/res/layout/fragment_cover.xml
@@ -27,6 +27,7 @@ Enjoy your Life with Coffee"
         android:layout_width="74dp"
         android:layout_height="74dp"
         android:id="@+id/img_coffee_cup"
+        android:onClick="imageClicked"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="44dp"
