--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,19 @@
         android:layout_height="match_parent"
         android:id="@+id/fragment"
         android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:id="@+id/fragment_event"></LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_coupon"
+            android:layout_gravity="center_horizontal"></LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
